Fix overlaping of the dropdown and table on protocol [SCI-8591] (#5539)

--- a/app/assets/stylesheets/my_modules/protocols/index.scss
+++ b/app/assets/stylesheets/my_modules/protocols/index.scss
@@ -52,7 +52,7 @@
 
   .dropdown {
     .dropdown-menu {
-      z-index: 9;
+      z-index: 102;
     }
   }
 }
