--- a/app/assets/stylesheets/protocols/protocol.scss
+++ b/app/assets/stylesheets/protocols/protocol.scss
@@ -32,7 +32,7 @@
   }
 
   .dropdown-menu {
-    z-index: 9;
+    z-index: 102;
   }
 
   .protocol-section {
